--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1403,4 +1403,7 @@ $dark-block-2: #2B2C2E;
         background-color: #141925;
         color: #fff;
     }
+    .table-no-data-sm p{
+        color: #fff;
+    }
 }
