--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -1500,7 +1500,7 @@
         margin-left: -8px;
     }
     .slick-list{
-        padding-left: 0 !important;
+        padding-left: 3px !important;
         padding-right: 45%;
         @media (max-width: 2000px) {
             padding-right: 30%;
@@ -1516,7 +1516,7 @@
             }
         }
         .slick-list{
-            padding-left: 0 !important;
+            padding-left: 3px !important;
             padding-right: 100px;
             @media (max-width: 2000px) {
                 padding-right: 40px;
@@ -1634,6 +1634,15 @@
 
 
 @media ($sm-1679) {
+    .maturing-pools-sec .trending-card .datas {
+        padding-left: 12px;
+    }
+    .maturing-pools-sec .trending-card .datas .datas-block .val-price{
+        padding-left: 10px;
+    }
+    .maturing-pools-sec .trending-card{
+        padding: 18px 10px;
+    }
     .portfolio-page-wrapper .my-portfolio-card .prop-wal-bal-block{
         padding: 12px 15px;
     }
@@ -1720,7 +1729,7 @@
     .maturing-pools-sec .trending-card .icons {
         width: auto;
         img{
-            width: 38px;
+            width: 36px;
         }
     }
     .maturing-pools-sec .trending-card .datas h4 {
@@ -1748,6 +1757,9 @@
 }
 
 @media($sm-1481){
+    .maturing-pools-sec .trending-card .datas .datas-block .val-price h5 {
+        font-size: 11px;
+    }
     .maturing-pools-sec .maturing-title-sec h2 {
         font-size: 16px;
     }
@@ -1933,6 +1945,15 @@
     }
 }
 
+@media (max-width: 650px) {
+    .maturing-pools-sec .item{
+        padding-right: 0;
+    }
+    .maturing-pools-sec .slick-list {
+        padding-left: 0 !important;
+    }
+}
+
 @media (max-width: 620px) {
     .maturing-pools-sec .slick-list {
         padding-right: 0;
@@ -1993,7 +2014,7 @@
     }
 }
 
-@media (max-width: 530px) {
+@media (max-width: 540px) {
     .portfolio-page-wrapper .my-portfolio-card {
         padding: 15px 12px 0;
     }
@@ -2001,15 +2022,15 @@
         flex-wrap: wrap;
 
     }
-    .theme-dark .maturing-pools-sec .trending-card .datas .datas-block .val-price{
-        width: 55%;
+    .maturing-pools-sec .trending-card .datas .datas-block .val-price{
+        width: 50%;
         margin-bottom: 15px;
         &:nth-child(odd){
-            width: 45%;
             flex-shrink: 0;
+            padding-right: 5px;
         }
     }
-    .theme-dark .maturing-pools-sec .trending-card{
+    .maturing-pools-sec .trending-card{
         align-items: flex-start;
     }
 }
@@ -2103,5 +2124,21 @@
         img{
             display: none;
         }
+    }
+    .maturing-pools-sec .trending-card .datas .datas-block .val-price {
+        width: 100%;
+        margin-bottom: 8px;
+        border-left: 0;
+        border-bottom: solid 1px;
+        padding-left: 5px;
+        padding-bottom: 10px;
+        &:last-child{
+            border: none;
+            padding-bottom: 0;
+            margin-bottom: 0;
+        }
+    }
+    .maturing-pools-sec .trending-card .datas .datas-block {
+        padding-top: 5px;
     }
 }
