--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -886,7 +886,7 @@
     padding-right: 15px; }
   .portfolio-page-wrapper .portfolio-staked-graph-block {
     background-color: #fff;
-    border: solid 1px #fff;
+    border: solid 1px #E3E4F3;
     margin-bottom: 20px;
     border-radius: 9px;
     padding: 30px; }
@@ -1579,9 +1579,9 @@
 
   .maturing-pools-sec .slick-list {
     padding-left: 0 !important; } }
-@media (max-width: 620px) {
+@media (max-width: 650px) {
   .maturing-pools-sec .slick-list {
-    padding-right: 0; } }
+    padding-right: 0 !important; } }
 @media (max-width: 579px) {
   .portfolio-page-wrapper .my-portfolio-card .pool-block .pool-card-sm {
     padding: 12px 10px; }
