--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -39,8 +39,10 @@
       background-repeat: no-repeat;
       display: inline-block;
       border: solid 1px #2E4276;
-      transform: rotate(180deg);
+      transform: rotate(0deg);
       transition: .3s; }
+    .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn button.collapsed::after {
+      transform: rotate(180deg); }
   .admn-dashboard-sec .dashboard-tab-cover .db-tab-btn .tab-title {
     margin: 0;
     font-size: 16px;
