--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -898,6 +898,9 @@
       display: flex;
       justify-content: space-between;
       margin-bottom: 20px; }
+      @media (max-width: 767px) {
+        .portfolio-page-wrapper .portfolio-staked-graph-block .staked-graph-title.total-rewards-accured-title .g-filter-block {
+          justify-content: unset; } }
     .portfolio-page-wrapper .portfolio-staked-graph-block .title-left {
       color: #2E4276; }
       .portfolio-page-wrapper .portfolio-staked-graph-block .title-left p {
@@ -914,7 +917,11 @@
       align-items: center;
       justify-content: center; }
     .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .g-filter-block {
-      align-items: center; }
+      align-items: center;
+      justify-content: flex-end; }
+      @media (max-width: 579px) {
+        .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .g-filter-block {
+          justify-content: unset; } }
     .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .bottom-lgd .grph-legend-dropdown .dropdown-toggle {
       border-radius: 6px;
       border: 1px solid #E3E4F3;
@@ -930,7 +937,7 @@
       padding: 8px 30px 8px 10px;
       background-image: url(../img/drp-arrow.svg);
       background-repeat: no-repeat;
-      background-position: 90% 12px;
+      background-position: calc(100% - 15px) 12px;
       display: inline-table;
       display: flex;
       align-items: center; }
@@ -967,7 +974,7 @@
       padding: 8px 30px 8px 10px;
       background-image: url(../img/drp-arrow.svg);
       background-repeat: no-repeat;
-      background-position: 90% center;
+      background-position: calc(100% - 15px) center;
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
@@ -1000,10 +1007,14 @@
     width: 430px; }
   .portfolio-page-wrapper .my-portfolio-card {
     width: 100%;
+    height: calc(100% - 15px);
     border: 1px solid #E3E4F3;
     border-radius: 12px;
     padding: 30px 15px 20px;
     background-color: #fff; }
+    @media (max-width: 1199px) {
+      .portfolio-page-wrapper .my-portfolio-card {
+        height: auto; } }
     .portfolio-page-wrapper .my-portfolio-card .my-portfolio-title {
       display: flex;
       align-items: center;
@@ -1572,7 +1583,7 @@
         margin-left: 0 !important; }
 
   .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .g-filter-block {
-    padding: 8px 0 0; } }
+    padding: 8px 0; } }
 @media (max-width: 650px) {
   .maturing-pools-sec .item {
     padding-right: 0; }
@@ -1602,7 +1613,8 @@
     font-size: 12px; }
 
   .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .g-filter-block {
-    flex-wrap: wrap; }
+    flex-wrap: wrap;
+    padding: 8px 0 0; }
     .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .g-filter-block .grph-select, .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .g-filter-block .filter-btn-cover {
       margin-bottom: 10px; }
 
@@ -1738,5 +1750,8 @@
   flex-wrap: wrap; }
   .portfolio-sec .portfolio-page-wrapper .portfolio-fluid-col {
     width: 100%; }
+    @media (max-width: 1199px) {
+      .portfolio-sec .portfolio-page-wrapper .portfolio-fluid-col {
+        order: 3; } }
 
 /*# sourceMappingURL=portfolio.css.map */
