--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1426,4 +1426,7 @@ $dark-block-2: #2B2C2E;
         border-color: #353535;
         background-image: url('../img/acc-up-arrw-white.svg');
     }
+    .portfolio-page-wrapper .my-portfolio-card .pool-block .pool-title span .info-i{
+        filter: none;
+    }
 }
